# GAIA-IoT

./: CHANGELOG.md  CODEX_REF.md  README.md  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
deploy/docker/: Dockerfile
deploy/k3s/: k3s-edge.yaml
deploy/systemd/: gaia-iot.service
docs/specs/: GAIA_Inter_Process_Communication_Spec_v1.0.md  GAIA_Linux_Kernel_Modifications_Spec_v1.0.md  GAIA_Tier1_Blockers_Research_and_Implementation_Plan.md  GAIA_Tier2_Deployment_Blockers_Research_and_Implementation_Plan.md  GAIA_Tier3_Validation_Blockers_Research_and_Implementation_Plan.md
gaia_iot/: __init__.py  codex_version.py  config.py  entrypoint.py
gaia_iot/edge/: __init__.py  codex_edge_gate.py
gaia_iot/fusion/: __init__.py  engine.py
gaia_iot/monitoring/: __init__.py  multispecies_monitor.py
gaia_iot/planetary/: __init__.py  publisher.py
gaia_iot/power/: __init__.py  manager.py
gaia_iot/sensors/: __init__.py  adapters.py  manager.py
gaia_iot/uplink/: __init__.py  uplink.py
tests/: test_iot_node.py  test_planetary_publisher.py  test_zodiac_twin.py
tests/storage/: test_iot_storage.py
zodiac_twin/: __init__.py  gaia_twin.py  harmony_engine.py  love_utility.py  zodiac_registry.py
