[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gaia-iot"
version = "0.1.0"
description = "GAIA IoT edge node — sensor ingestion, fusion, planetary-state publishing"
requires-python = ">=3.11"
dependencies = [
    "gaia-core>=0.1.0",
]

[project.optional-dependencies]
sensors = ["RPi.GPIO; platform_machine=='aarch64'"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
